# toobusytoimprove

./: .gitattributes  CNAME  Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: build_web.sh
src/: main.rs  web.rs
web/: index.html  too-busy-to-improve.js  too-busy-to-improve_bg.wasm
