[package]
name = "too-busy-to-improve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "wgpu",
    "x11"] }
egui = { version = "0.28.1", default-features = false, features = [] }
egui_plot = { version = "0.28.1", default-features = false, features = [] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.69", features = ["console"], default-features = false }

[profile.release]
opt-level = 2